# ink_manager

./: .gitignore  .gitmodules  LICENSE  README.md  WeatherData.py  app.py  cron.sh  get_ip.sh  globals.py  image_test.py  ink.service  ink_display.py  logging.json  main.py  models.py  pyproject.toml  requirements.txt  start.sh  update_weather.py  utils.py
assets/images/weather_icons/: resize.py  svg2png.py
assets/tools/colorsheet/: N-color.gpl  act_to_gpl.py
assets/tools/forecast_builder/: WeatherData.py  main.py
assets/tools/scripts/: busy_check.py  update_weather.py
lib/: epd7in3f.py  epdconfig.py
scripts/: get_psk.sh  image_test.py  install.sh
systemd/: ink.service  ink_quote.service  ink_quote.timer  ink_weather.service  quote.timer
systemd/system/: ink.service
systemd/user/: ink_fact.service  ink_fact.timer  ink_quote.timer  ink_weather.timer
