[project]
name = "ink-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.115.8",
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "qrcode>=8.0",
    "requests>=2.32.3",
    "rpi-gpio>=0.7.1",
    "spidev>=3.6",
]
